log
Mon 12 Sep 2022 12:27:47 AM UTC: 
 tests:  0|6
total_score: 0/70
6dd7146
Mon 12 Sep 2022 12:32:34 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:47: error: expected ‘)’ before ‘capacity’
   55 |   HashMap* M = (HashMap)malloc(sizeof(HashMap)capacity);
      |                               ~               ^~~~~~~~
      |                                               )
hashmap.c:55:3: error: conversion to non-scalar type requested
   55 |   HashMap* M = (HashMap)malloc(sizeof(HashMap)capacity);
      |   ^~~~~~~
hashmap.c:56:14: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   56 |   M->buckets = (Pair*)calloc(capacity,sizeof(Pair));
      |              ^
cc1: all warnings being treated as errors
Compilation failed
ca47553
Mon 12 Sep 2022 12:36:00 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:47: error: expected ‘)’ before ‘capacity’
   55 |   HashMap* M = (HashMap)malloc(sizeof(HashMap)capacity);
      |                                               ^~~~~~~~
      |                                               )
hashmap.c:55:3: error: conversion to non-scalar type requested
   55 |   HashMap* M = (HashMap)malloc(sizeof(HashMap)capacity);
      |   ^~~~~~~
hashmap.c:56:14: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   56 |   M->buckets = (Pair*)calloc(capacity,sizeof(Pair));
      |              ^
cc1: all warnings being treated as errors
Compilation failed
41f8b55
Mon 12 Sep 2022 12:37:07 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:14: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   56 |   M->buckets = (Pair*)calloc(capacity,sizeof(Pair));
      |              ^
cc1: all warnings being treated as errors
Compilation failed
972c1f4
Mon 12 Sep 2022 12:37:30 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1821ede
Mon 12 Sep 2022 12:39:31 AM UTC: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   53 |     if(i = map->capacity){
      |        ^
cc1: all warnings being treated as errors
Compilation failed
3916701
Mon 12 Sep 2022 12:43:44 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
1cf84fe
Mon 12 Sep 2022 12:48:56 AM UTC: 
 hashmap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:78:24: error: statement with no effect [-Werror=unused-value]
   78 |     eliminatePair->key == NULL;
      |                        ^
hashmap.c: At top level:
hashmap.c:83:1: error: expected identifier or ‘(’ before ‘}’ token
   83 | }
      | ^
hashmap.c:107:5: error: expected identifier or ‘(’ before ‘return’
  107 |     return NULL;
      |     ^~~~~~
hashmap.c:108:1: error: expected identifier or ‘(’ before ‘}’ token
  108 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
609ecd9
Mon 12 Sep 2022 12:49:18 AM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:78:24: error: statement with no effect [-Werror=unused-value]
   78 |     eliminatePair->key == NULL;
      |                        ^
hashmap.c: At top level:
hashmap.c:105:5: error: expected identifier or ‘(’ before ‘return’
  105 |     return NULL;
      |     ^~~~~~
hashmap.c:106:1: error: expected identifier or ‘(’ before ‘}’ token
  106 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2ca84bc
